vaccination algorithm done

--- a/assignment_2.ipynb
+++ b/assignment_2.ipynb
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1695,7 +1695,237 @@
     "    def _infect_low_degree(self, G: nx.Graph, fraction: float) -> set:\n",
     "        n = G.number_of_nodes()\n",
     "        k = max(1, int(round(fraction * n)))\n",
-    "        return set([u for u, _d in sorted(G.degree(), key=lambda x: x[1])[:k]])"
+    "        return set([u for u, _d in sorted(G.degree(), key=lambda x: x[1])[:k]])\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    ########################## Vaccination Helpers ##########################\n",
+    "    \n",
+    "    \n",
+    "    def _ndlib_init_with_seeds(self, G: nx.Graph, beta: float, gamma: float,\n",
+    "                               infected0: List[int], removed0: List[int] = None):\n",
+    "                                   \n",
+    "        \"\"\"Create an NDlib SIR model with explicit initial infected/removed nodes.\"\"\"\n",
+    "        \n",
+    "        removed0 = removed0 or []\n",
+    "        model = ep.SIRModel(G)\n",
+    "        config = mc.Configuration()\n",
+    "        config.add_model_parameter(\"beta\", float(beta))\n",
+    "        config.add_model_parameter(\"gamma\", float(gamma))\n",
+    "        \n",
+    "        for u in G.nodes():\n",
+    "            config.add_node_configuration(\"status\", u, 0)\n",
+    "        for  u in infected0:\n",
+    "            config.add_node_configuration(\"status\", u, 1)\n",
+    "        for  u in removed0:\n",
+    "            config.add_node_configuration(\"status\", u, 2)\n",
+    "            \n",
+    "        model.set_initial_status(config)\n",
+    "        return model\n",
+    "        \n",
+    "    def _test_node(self, true_status: int, acc:float, rng: np.random.Generator) -> int:\n",
+    "        \"\"\"Return observed status in {0:S,1:I}. With prob=acc it's correct, else flipped.\"\"\"\n",
+    "        if true_status == 2:\n",
+    "            true = 0\n",
+    "        else:\n",
+    "            true = true_status\n",
+    "        flip = rng.random() > acc\n",
+    "        return true if not flip else (1 - true)\n",
+    "    \n",
+    "    \n",
+    "    def score_nodes(self, G: nx.Graph, obs_status: Dict[int, int], \n",
+    "                    alpha: float = 0.1, beta_w: float = 0.25, gamma_w: float = 0.0) -> Dict[int, float]:\n",
+    "        \"\"\"\n",
+    "        score(u) = alpha * (#observed infected neighbors) \n",
+    "                      + beta * (degree(u)) \n",
+    "                      + gamma * degree(u)\n",
+    "                      \n",
+    "        obs_status: dict u -> {UNK:-1, S:0, I:1, R:2}\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        score = {}\n",
+    "        I_observed = {u for u, st, in obs_status.items() if st == 1}\n",
+    "        for u in G.nodes():\n",
+    "            if obs_status.get(u, -1) == 2:  # observed R -> skip\n",
+    "                continue\n",
+    "        \n",
+    "            num_infected = sum(1 for v in G.neighbors(u) if obs_status.get(v, -1) == 1)\n",
+    "        \n",
+    "            k = G.degree(u)\n",
+    "            if gamma_w > 0.0 and I_observed:\n",
+    "                h2 = 0\n",
+    "                for v in G.neighbors(u):\n",
+    "                    for w in G.neighbors(v):\n",
+    "                        if w != u and obs_status.get(w, -1) == 1:\n",
+    "                            h2 += 1\n",
+    "                            \n",
+    "            else:\n",
+    "                h2 = 0\n",
+    "                \n",
+    "            score[u] = alpha * num_infected + beta_w * k + gamma_w * h2\n",
+    "        \n",
+    "        return score\n",
+    "    \n",
+    "    def dynamic_vaccination_experiemnt(\n",
+    "        self,\n",
+    "        G: nx.Graph,\n",
+    "        beta: float,\n",
+    "        gamma: float,\n",
+    "        tests_per_step: int,\n",
+    "        vaccines_per_step: int,\n",
+    "        test_accuracy: float,\n",
+    "        iterations: int = 300,\n",
+    "        seed_inits: int = 5, # 5 initial infected nodes, always fixed\n",
+    "        alpha_w : float = 0.1,\n",
+    "        beta_w : float = 0.25,\n",
+    "        gamma_w : float = 0.0,\n",
+    "        seed: int = 42\n",
+    "    ):\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        Dynamic vaccination experiment with tesing and vaccination at each step.\n",
+    "        \n",
+    "            Test top cases by risk score (observed neighbors + degree)\n",
+    "            Vaccinate ring around observed infected, highest degree first\n",
+    "            Administer leftover doses via acquaintence vaccination\n",
+    "        Returns a dict with trajectories and metrics\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        rng = np.random_default_rng(seed)\n",
+    "        \n",
+    "        nodes = np.array(list(G.nodes))\n",
+    "        infected0 = list(rng.choice(nodes, size=seed_inits, replace=False))\n",
+    "        removed0: List[int] = []\n",
+    "        \n",
+    "        # NDlib model - true state\n",
+    "        \n",
+    "        model = self._ndlib_init_with_seeds(G, beta, gamma, infected0, removed0)\n",
+    "        \n",
+    "        # Observed status (-1: unknown, 0: S, 1: I, 2: R)\n",
+    "        \n",
+    "        obs_status = {u: -1 for u in G.nodes()}\n",
+    "        for u in infected0:\n",
+    "            obs_status[u] = 1 # status initially unknown\n",
+    "            \n",
+    "        # Logs\n",
+    "        \n",
+    "        I_curve, R_curve = [], []\n",
+    "        SIR_counts = []\n",
+    "        \n",
+    "        peak_I = 0.0\n",
+    "        t_peak = 0\n",
+    "        N = G.number_of_nodes()\n",
+    "        \n",
+    "        # degree cache\n",
+    "        deg_dict = dict(G.degree())\n",
+    "        \n",
+    "        # Main loop\n",
+    "        for t in range(iterations):\n",
+    "            # early stopping if epidemic over\n",
+    "            \n",
+    "            true_status = model.status # {node: code}\n",
+    "            scores = self.score_nodes(G, obs_status, alpha_w = alpha_w, beta_w = beta_w, gamma_w = gamma_w)\n",
+    "            \n",
+    "            candidate = [(u, s) for u, s in scores.items() if obs_status.get(u, -1) != 2]\n",
+    "            candidate.sort(key=lambda x: x[1], reverse=True)\n",
+    "            to_test = [u for u, _ in candidate[:max(0,tests_per_step)]]\n",
+    "            \n",
+    "            # Test step: update observed status (only for S, I labels)\n",
+    "            for u in to_test:\n",
+    "                result = self._test_node(true_status[u], test_accuracy, rng)\n",
+    "                obs_status[u] = result\n",
+    "                \n",
+    "                \n",
+    "            # Vaccination step\n",
+    "            \n",
+    "            vaccines_left = vaccines_per_step\n",
+    "            \n",
+    "            # 1: Ring vaccination\n",
+    "            \n",
+    "            infected_observed = [u for u, st in obs_status.items() if st == 1]\n",
+    "            ring_candidates = set()\n",
+    "            if infected_observed:\n",
+    "                for i in infected_observed:\n",
+    "                    for j in G.neighbors(i):\n",
+    "                        if obs_status.get(j, -1) == 0:\n",
+    "                            ring_candidates.add(j)\n",
+    "\n",
+    "            # sort ring candidates by degree\n",
+    "            \n",
+    "            ring_candidates_sorted = sorted(list(ring_candidates), key = lambda x: deg_dict.get[x], reverse=True)\n",
+    "            for i in ring_candidates_sorted:\n",
+    "                if vaccines_left == 0:\n",
+    "                    break\n",
+    "                if model.status[i] != 2:\n",
+    "                    model.status[i] = 2\n",
+    "                    obs_status[i] = 2\n",
+    "                    vaccines_left -= 1\n",
+    "                    \n",
+    "            # 2: Acquaintance vaccination\n",
+    "            \n",
+    "            tries = 0\n",
+    "            while vaccines_left > 0 and tries < 5 * N:\n",
+    "                x = int(rng.choice(nodes))\n",
+    "                if obs_status.get(x, -1) == 2:\n",
+    "                    tries += 1\n",
+    "                    continue\n",
+    "                neighbors = [y for y in G.neighbors(x) if model.status[y] != 2]\n",
+    "                if not neighbors:\n",
+    "                    tries += 1\n",
+    "                    continue\n",
+    "                y = int(rng.choice(neighbors))\n",
+    "                if model.status[y] != 2:\n",
+    "                    model.status[y] = 2\n",
+    "                    obs_status[y] = 2\n",
+    "                    vaccines_left -= 1\n",
+    "                tries += 1\n",
+    "                \n",
+    "            # Increase step count for epidemic\n",
+    "            out = model.iteration()\n",
+    "            values = np.array([model.status[u] for u in G.nodes()], dtype = int)\n",
+    "            S = int(np.sum(values == 0)); I = int(np.sum(values == 1)); R = int(np.sum(values == 2))\n",
+    "            SIR_counts.append( (S,I,R) )\n",
+    "            I_curve.append(I); R_curve.append(R)\n",
+    "            \n",
+    "            if I > peak_I:\n",
+    "                peak_I = I\n",
+    "                t_peak = t\n",
+    "            if I == 0:\n",
+    "                break\n",
+    "        \n",
+    "        peak_frac = peak_I / N if N > 0 else np.nan\n",
+    "        final_size_frac = R_curve[-1] / N if N > 0 else np.nan\n",
+    "        duration = len(I_curve)\n",
+    "        \n",
+    "        return {\n",
+    "            \"policy\": \"RPA\",\n",
+    "            \"beta\": beta, \"gamma\": gamma,\n",
+    "            \"tests_per_step\": tests_per_step,\n",
+    "            \"iterations\": duration,\n",
+    "            \"SIR_counts\": np.array(SIR_counts, dtype=int),\n",
+    "            \"peak_infected\": float(peak_I),\n",
+    "            \"time_to_peak\": int(t_peak),\n",
+    "            \"final_recovered\": float(R_curve[-1]) if R_curve else 0.0,\n",
+    "            \"peak_frac\": peak_frac,\n",
+    "            \"final_size_frac\": final_size_frac,\n",
+    "            \"n_nodes\": N,\n",
+    "        }\n",
+    "        \n",
+    "        \n",
+    "    def experiment_dynamic_vaccination_random(\n",
+    "        self,\n",
+    "        G: nx.Graph,\n",
+    "        beta: float,\n",
+    "        gamma: float,\n",
+    "        test_per_step: int,\n",
+    "        vaccines_per_step: int,\n",
+    "        test_accuracy: float, #symmetry, not needed here\n",
+    "        iterations: int = 300,\n",
+    "        seed_inits: int = 5,\n",
+    "        seed: int = 5678,\n",
+    "    ):\n",
+    "        raise NotImplementedError(\"To be implemented\")"
    ]
   },
   {
