fixed accuracy issue

--- a/assignment_2.ipynb
+++ b/assignment_2.ipynb
@@ -1664,6 +1664,9 @@
     "\n",
     "            # Ring vaccination: neighbors of observed infected (unknown OR tested-S)\n",
     "            I_obs = {u for u, st in obs_status.items() if st == 1}\n",
+    "            # OR: use added uncertainty in infection detection\n",
+    "            # I_obs = {u for u, st in obs_status.items() if st == 1 and rng.random() < test_accuracy}\n",
+    "\n",
     "            ring_candidates: Set[int] = set()\n",
     "            if I_obs:\n",
     "                for w in I_obs:\n",
