--- a/assignment_2.ipynb
+++ b/assignment_2.ipynb
@@ -907,6 +907,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Resonance Analysis Results\n",
+      "Parameters: β=0.5, γ=0.1, μ=0.020000, R₀=4.17\n",
+      "\n",
+      "N        f* (1/time)     Period (time)   Peak Power     \n",
+      "500      0.009997        100.03          3.700e-02      \n",
+      "1000     0.013330        75.02           2.000e-02      \n",
+      "2000     0.013330        75.02           6.118e-03      \n",
+      "5000     0.013330        75.02           4.019e-03      \n",
+      "10000    0.013330        75.02           1.733e-03      \n",
+      "Power decay factor: 21.3x\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nResonance Analysis Results\")\n",
+    "print(f\"Parameters: β={beta}, γ={gamma}, μ={mu:.6f}, R₀={beta/(gamma+mu):.2f}\")\n",
+    "print(f\"\\n{'N':<8} {'f* (1/time)':<15} {'Period (time)':<15} {'Peak Power':<15}\")\n",
+    "\n",
+    "for N, res in zip(N_values, resonance_results):\n",
+    "    if res[\"peak_freq\"] is not None and res[\"peak_freq\"] > 0:\n",
+    "        period = 1.0 / res[\"peak_freq\"]\n",
+    "        print(f\"{N:<8} {res['peak_freq']:<15.6f} {period:<15.2f} {res['peak_power']:<15.3e}\")\n",
+    "    else:\n",
+    "        print(f\"{N:<8} {'No peak':<15} {'N/A':<15} {'N/A':<15}\")\n",
+    "        \n",
+    "peak_freqs = [res[\"peak_freq\"] for res in resonance_results]\n",
+    "peak_powers = [res[\"peak_power\"] for res in resonance_results]\n",
+    "\n",
+    "valid_freqs = [f for f in peak_freqs if f is not None]\n",
+    "valid_powers = [p for p in peak_powers if p is not None]\n",
+    "\n",
+    "print(f\"Power decay factor: {max(valid_powers)/min(valid_powers):.1f}x\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
